# journal-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  apps.json  pyproject.toml
.github/workflows/: ci.yml
config/: openalex_sources.json
config/profiles/: turkish-politics-starter.json
docs/releases/: v0.3.0.md
examples/: turkish_politics_articles_database.sample.xlsx
scripts/: discover_journals.bat  discover_journals.command  run_sync.bat  run_sync.command  sync_openalex.py
src/journal_tracker/: __init__.py  __main__.py  cli.py  discover.py  discover_cli.py  profiles.py  sync.py  workbook_settings.py
tests/: conftest.py  test_discover.py  test_integration.py  test_profiles.py  test_sync_utils.py
