[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-tracker"
version = "0.1.0"
description = "Sync OpenAlex journal publications into an Excel tracker workbook."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ozgenur Korlu" }
]
dependencies = [
  "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.11,<0.12",
  "pre-commit>=3.7,<4.0",
]

[project.scripts]
journal-tracker-sync = "journal_tracker.cli:main"
journal-tracker-discover-journals = "journal_tracker.discover_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
